--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ lmfit>=1.0
 beautifulsoup4>=4.11
 matplotlib>=3.4
 ipympl>=0.7
-ipywidgets>=7.5, <8.0
+ipywidgets>=7.5
 qgrid>=1.3.1
 ipyfilechooser>=0.3.5
