--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Pyriod
 nav:
     - Home: index.md
-    - Tutorial: tutorial.md
+    - Walkthrough: walkthrough.md
 #   - Examples: examples.md
 theme: readthedocs
